Fixed pointer shifting screen

--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,26 @@
 body {
   margin: 0.5%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 .big-font {
   font-size: 30px;
+}
+Button {
+  margin-left: 20px;
+}
+.smaller {
+  max-width: 16px;
+  top: 50%;
+  margin-left: 10px;
+  margin-bottom: 5px;
+  max-height: 16px;
 }
